TP/IntroToJavaCC/src/ex1/Parser.jjt
options
{
LOOKAHEAD=2; //needed for to decide if line is statement or final
}

PARSER_BEGIN(Parser)
package ex1;

public class Parser
{
public static void main(String args[]) throws ParseException {
	System.out.println("Parser for a calculator that accepts expressions with integers, +,-,*,/,(,and ).");
	System.out.println("Write an arithmetic expression:");
	Parser myCalc = new Parser(System.in);
	SimpleNode root = myCalc.Expression(); // returns reference to root node
	root.dump(""); // prints the tree on the screen

	System.out.println("Expression value: "+myCalc.eval(root));
}

int eval(SimpleNode node) {
	if(node.jjtGetNumChildren() == 0) // leaf node with integer value
	return node.val;
	
	else if(node.jjtGetNumChildren() == 1) // only one child
	return this.eval((SimpleNode) node.jjtGetChild(0));
	
	SimpleNode lhs = (SimpleNode) node.jjtGetChild(0); //left child
	SimpleNode rhs = (SimpleNode) node.jjtGetChild(1); // right child
	
	switch(node.id) {
		case ParserTreeConstants.JJTADD : return eval( lhs ) + eval( rhs );
		case ParserTreeConstants.JJTSUB : return eval( lhs ) - eval( rhs );
		case ParserTreeConstants.JJTMUL : return eval( lhs ) * eval( rhs );
		case ParserTreeConstants.JJTDIV : return eval( lhs ) / eval( rhs ); 
		default : // abort
		System.out.println("Ilegal operator!");
		System.exit(1);
	}
	return 0;
}
}
PARSER_END(Parser)

SKIP :
{
" " | "\r" | "\t"
} 
TOKEN:
{
< INTEGER: (["0"-"9"])+ > 
| < LF: "\n" >
| < VAR : ["A"-"Z", "a"-"z"](["0"-"9", "A"-"Z", "a"-"z"])* >
| < SEMICOL: ";" >
}

SimpleNode Expression (): {Token sym, value;}
{
( sym =<VAR> "=" value=<INTEGER>{ 
        SymbolTable.store(sym.image, Integer.parseInt(value.image));
   } <SEMICOL> <LF>)*
Expr1() <SEMICOL> <LF> {return jjtThis;}
}
void Expr1() #void: {}
{
Expr2(1)
[
("+" Expr2(1) #Add(2)
| "-" Expr2(1) #Sub(2))
]
}
void Expr2(int sign) #void: {} // 1: positive; -1: negative
{
Expr3(sign)
("*" Expr3(1) #Mul(2)
| "/" Expr3(1) #Div(2)
)? // (…)?equivalent to […]
}
void Expr3(int sign) #void: {Token t;}
{
(
t=<INTEGER>
{
jjtThis.val = sign * Integer.parseInt(t.image);
}
|
t=<VAR>
{
jjtThis.val = sign * SymbolTable.get(t.image);} )#Term

| "-" Expr3(-1)
| "(" Expr1() ")"
}
